Changed position fixed to relative and added overflow and height property

--- a/fe/shared/layouts/global.scss
+++ b/fe/shared/layouts/global.scss
@@ -214,5 +214,7 @@ header {
 }
 
 .no-scroll {
-    position: fixed;
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
 };
